# rtl-sdr-rs

./: Cargo.toml
examples/: rtl_test.rs  simple_fm.rs
src/: error.rs  lib.rs  rtlsdr.rs
src/device/: constants.rs  device_handle.rs  device_test.rs  mod.rs
src/tuners/: r820t.rs
