[package]
name = "seify-rtlsdr"
version = "0.0.1"
description = "Rusty RTL-SDR Driver"
documentation = "https://docs.rs/seify-rtlsdr/"
edition = "2021"
homepage = "https://www.futuresdr.org"
license = "GPL-3.0"
repository = "https://github.com/FutureSDR/seify"
exclude = ["*.bin"]

[features]
default = []
rtl_sdr_blog = []

[dependencies]
byteorder = "1"
log = "0.4"
mockall = "0.11"
parking_lot = "0.12.1"
rusb = "0.9"

[dev-dependencies]
rusb = "0.9"
byteorder = "1"
ctrlc = "3.2.3"
num-complex = "0.4"
stderrlog = "0.5"
